DT-1798  Blog Search and Sign Up widget form alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -477,7 +477,7 @@ input[type=search],
 	height: 41px;
 }
 
-.widget.profile, .widget.signupform, .widget.blogsearch {
+.widget.profile {
 	input[type=email], input[type=search] {
 		width: 100%;
 		padding-right: 74px;
@@ -488,6 +488,69 @@ input[type=search],
 textarea {
 	resize: vertical;
 }
+
+
+
+
+// ======= Widget: Sign up form
+.widget.signupform {
+
+  .form-group {
+    // Flex
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-direction: normal;
+      -moz-box-direction: normal;
+      -webkit-box-orient: horizontal;
+      -moz-box-orient: horizontal;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-align-content: center;
+      -ms-flex-line-pack: center;
+      align-content: center;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+
+
+      label {
+          display: block;
+          width: 100%;
+
+    }
+
+    input.email {
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+        margin-bottom: 0;
+    }
+    button {
+
+
+    }
+  }
+}
+
+
+
+
 
 .widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
 .widget.ecomcheckout .delivery select,
@@ -777,6 +840,67 @@ input[type="search"],
 }
 
 .blog-post-sharing { margin: 10px 0;}
+
+// ======= Widget: BlogSearch
+.widget.blogsearch {
+    padding-bottom: 1em;
+    form {
+        .form-group {
+            // Flex
+            display: -webkit-box;
+            display: -moz-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-box-direction: normal;
+            -moz-box-direction: normal;
+            -webkit-box-orient: horizontal;
+            -moz-box-orient: horizontal;
+            -webkit-flex-direction: row;
+            -ms-flex-direction: row;
+            flex-direction: row;
+            -webkit-flex-wrap: wrap;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+            -webkit-box-pack: justify;
+            -moz-box-pack: justify;
+            -webkit-justify-content: space-between;
+            -ms-flex-pack: justify;
+            justify-content: space-between;
+            -webkit-align-content: flex-start;
+            -ms-flex-line-pack: start;
+            align-content: flex-start;
+            -webkit-box-align: center;
+            -moz-box-align: center;
+            -webkit-align-items: center;
+            -ms-flex-align: center;
+            align-items: center;
+        }
+
+
+        label {
+                width: 100%;
+        }
+        input {
+            // Flex
+            -webkit-box-flex: 1;
+            -moz-box-flex: 1;
+            -webkit-flex: 1 1 auto;
+            -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+            margin-bottom: 0;
+        }
+
+        button {
+            // Flex
+            -webkit-box-flex: 0;
+            -moz-box-flex: 0;
+            -webkit-flex: 0 1 auto;
+            -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+        }
+    }
+}
 
 // Menu
 .menu .menu-subsection {
